--- a/requirements.txt
+++ b/requirements.txt
@@ -2,21 +2,21 @@ alembic==1.6.5
 atomicwrites==1.4.1
 attrs==24.2.0
 blinker==1.6.2
-click==8.0.1
+Click==7.0
 colorama==0.4.6
-Flask==1.1.2
-Flask-Cors==3.0.10
+Flask==1.0.2
+Flask-Cors==3.0.8
 Flask-Migrate==2.7.0
 Flask-Script==2.0.6
-Flask-SQLAlchemy==2.5.1
+Flask-SQLAlchemy==2.5.0
 greenlet==1.1.0
 gunicorn==20.1.0
 importlib-metadata==6.7.0
 iniconfig==2.0.0
-itsdangerous==2.0.1
-Jinja2==3.0.1
+itsdangerous==1.1.0
+Jinja2==2.10.1
 Mako==1.1.4
-MarkupSafe==2.0.1
+MarkupSafe==1.1.1
 packaging==24.0
 pluggy==0.13.1
 psycopg2-binary==2.9.1
@@ -30,7 +30,7 @@ ruamel.yaml==0.16.5
 six==1.16.0
 SQLAlchemy==1.4.18
 toml==0.10.2
-Werkzeug==2.0.1
+Werkzeug==0.15.6
 zipp==3.15.0
 astroid==2.2.5
 ecdsa==0.13.2
@@ -38,8 +38,11 @@ future==0.17.1
 isort==4.3.18
 lazy-object-proxy==1.4.0
 mccabe==0.6.1
-pycryptodome==3.3.1
 pylint==2.3.1
-python-jose-cryptodome==1.3.2
 typed-ast==1.4.2
 wrapt==1.11.1
+wheel
+pyrebase4
+pyrebase-t
+pycryptodome
+python-jose-cryptodome==1.3.2
