--- a/requirements.txt
+++ b/requirements.txt
@@ -41,8 +41,7 @@ mccabe==0.6.1
 pylint==2.3.1
 typed-ast==1.4.2
 wrapt==1.11.1
-wheel
-pyrebase4
-pyrebase-t
-pycryptodome
-python-jose-cryptodome
+pycryptodome==3.3.1
+python-jose-cryptodome==1.3.2
+
+
