--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,31 @@
-alembic==1.6.5
-atomicwrites==1.4.1
-attrs==24.2.0
-blinker==1.6.2
+alembic==1.4.0
+aniso8601==8.0.0
+certifi==2019.9.11
 Click==7.0
-colorama==0.4.6
-Flask==1.0.2
-Flask-Cors==3.0.8
-Flask-Migrate==2.7.0
+ecdsa==0.15
+Flask==1.1.1
+Flask-Cors==3.0.9
+Flask-Migrate==2.5.2
+Flask-Moment==0.9.0
+Flask-RESTful==0.3.7
 Flask-Script==2.0.6
-Flask-SQLAlchemy==2.5.0
-greenlet==1.1.0
-gunicorn==20.1.0
-importlib-metadata==6.7.0
-iniconfig==2.0.0
+Flask-SQLAlchemy==2.4.0
+Flask-WTF==0.14.3
+gunicorn==20.0.4
 itsdangerous==1.1.0
-Jinja2==2.10.1
-Mako==1.1.4
+Jinja2==2.11.3
+Mako==1.1.1
 MarkupSafe==1.1.1
-packaging==24.0
-pluggy==0.13.1
-psycopg2-binary==2.9.1
-py==1.11.0
-PyJWT==1.7.1
-pytest==6.2.2
+psycopg2==2.8.4
+psycopg2-binary==2.8.2
+pyasn1==0.4.8
+pycryptodome==3.9.7
 python-dateutil==2.8.1
-python-dotenv==0.21.1
 python-editor==1.0.4
-ruamel.yaml==0.16.5
-six==1.16.0
-SQLAlchemy==1.4.18
-toml==0.10.2
-Werkzeug==0.15.6
-zipp==3.15.0
-astroid==2.2.5
-ecdsa==0.13.2
-future==0.17.1
-isort==4.3.18
-lazy-object-proxy==1.4.0
-mccabe==0.6.1
-pylint==2.3.1
-typed-ast==1.4.2
-wrapt==1.11.1
-pycryptodome==3.3.1
-python-jose-cryptodome==1.3.2
-
-
+python-jose==3.1.0
+pytz==2019.3
+rsa==4.7
+six==1.12.0
+SQLAlchemy==1.3.3
+Werkzeug==1.0.0
+WTForms==2.2.1
